<h3>October 21, 2016</h3>
<b><u>VIPPY</u></b>
 - Add an option to set your main character in <a href="/profile/account" target="_blank">Profile > Account Settings</a>. Sometimes Vippy does not correctly set the main character.



<h3>October 18, 2016</h3>
<b><u>STATISTICS</u></b>
 - Some of statistic collection was still relying on the IGB. Fixed that.
   Unfortunately, this means that from the moment the IGB got removed (11th) until today (18th) some statistics may be inaccurate!!!

<b><u>MAP</u></b>
 - Fixed a bug in the recently-scanned marker.



<h3>October 17, 2016</h3>
<b><u>MAP</u></b>
 - Set destination via CREST is working. You may need to re-authenticate your characters with CREST to get it working.
 - Fixed system-notifications. Adding new notifications was broken.
 - Fixed known-systems management. Was broken also...

<b><u>VIPPY</u></b>
 - Re-introduced the <strong>Exit-Finder</strong>!
 - Fixed several errors that were popping up at random places.



<h3>October 11, 2016</h3>
<b><u>CREST</u></b>
 - CREST is here. <a href="/help/crest" target="_blank">Tell me all about it</a>.
 - Unfortunately, some features that depended on the IGB are now gone temporarily.
  	- Set destination to a system
  	- Exit finder
  	These features are still possible with CREST, i just haven't gotten around to them yet. I expect to be able to add them in the coming days.

<b><u>MAP</u></b>
 - Getting rid of the IGB means we can use new technologies. So, background changes/improvements were done to the map.
 - Removed 'Mass Delete' mode. It has since been replaced by the two remove options in a systems right-click menu.
 	- 'Remove [systemname]': Removes that system.
 	- 'Remove connected systems': Removes all systems connected to this system. Remove a connection and then use this to remove that part of the chain!
 - Add a CITADEL signature type that behaves just like a POS signature.

<b><u>ADMIN</u></b>