@@ -115,6 +115,16 @@ class LocationTracker
                         if ($addNewWormhole) {
                             $controller = new \map\controller\Wormhole();
                             $controller->addWormhole($map, $previousLocationID, $locationID);
+
+                            // Toevoegen aan stats.
+                            $char = \eve\model\Character::findByID($characterID);
+                            $stat = new \stats\model\Whmap();
+                            $stat->chainID = $map->id;
+                            $stat->corpID = $char->corporationID;
+                            $stat->pilotID = $char->id;
+                            $stat->mapdate = date("Y-m-d H:i:s");
+                            $stat->systemID = $locationID;
+                            $stat->store();
                         }
 
                         $connection = \map\model\Connection::getConnectionByLocations($previousLocationID, $locationID, $map->id);
